--- a/package.json
+++ b/package.json
@@ -14,42 +14,33 @@
   "dependencies": {},
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@commitlint/travis-cli": "^7.2.1",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.9",
-    "@types/ramda": "^0.25.41",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-test-renderer": "^16.0.3",
-    "@types/webpack": "^4.4.19",
-    "babel-loader": "^8.0.4",
     "codecov": "^3.1.0",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.15",
     "husky": "^1.1.4",
     "jest": "^23.6.0",
-    "peer-deps-externals-webpack-plugin": "^1.0.4",
     "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
+    "rollup": "^0.67.4",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup-plugin-uglify": "^6.0.0",
     "semantic-release": "^15.6.3",
     "source-map-support": "^0.5.6",
     "travis-deploy-once": "^5.0.1",
     "ts-jest": "^23.10.4",
-    "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "typedoc": "^0.13.0",
-    "typedoc-twilio-theme": "^1.0.0",
-    "typescript": "^3.1.6",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^3.1.6"
   },
   "files": [
     "dist",
@@ -73,27 +64,29 @@
     "state-management"
   ],
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
   "name": "@libre/atom",
   "repository": {
     "type": "git",
     "url": "https://github.com/libre-org/atom.git"
   },
   "scripts": {
-    "build": "npm run clean && NODE_ENV=production webpack",
-    "build:dev": "npm run clean && webpack",
+    "build": "rollup -c rollup.config.ts",
+    "build:dev": "npm run prebuild && webpack",
     "build:docs": "rimraf docs && typedoc --options typedoc.js src",
-    "clean": "rimraf dist",
     "git:commit": "npx git-cz",
     "dev": "npm run test -- --watch",
     "lint": "tslint --project .",
     "lint:fix": "tslint --project --fix",
+    "prebuild": "rimraf dist",
     "semantic-release": "semantic-release",
     "test": "jest --env=jsdom",
     "test:withCoverage": "jest --env=jsdom --collectCoverage",
     "travis-deploy-once": "travis-deploy-once"
   },
   "sideEffects": false,
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "unpkg": "https://unpkg.com/@libre/atom",
   "version": "0.0.0-development"
 }
