--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "allowJs": false,
     "declaration": true,
+    "declarationDir": "dist/types",
     "esModuleInterop": true,
     "lib": ["dom", "es2015"],
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "outDir": "./dist",
+    "outDir": "./dist/lib",
     "rootDir": "src",
     "sourceMap": true,
     "strict": true,
