--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "utility-types": "^2.1.0"
   },
   "files": [
     "dist",
