--- a/package.json
+++ b/package.json
@@ -14,34 +14,35 @@
   "dependencies": {},
   "description": "",
   "devDependencies": {
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@commitlint/travis-cli": "^7.2.1",
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.9",
-    "codecov": "^3.1.0",
-    "commitizen": "^2.10.1",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.1.4",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.2",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.67.4",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/travis-cli": "^17.0.2",
+    "@types/jest": "^28.1.2",
+    "@types/node": "^18.0.0",
+    "codecov": "^3.8.2",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.7",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
-    "rollup-plugin-uglify": "^6.0.0",
-    "semantic-release": "^15.6.3",
-    "source-map-support": "^0.5.6",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "rollup-plugin-uglify": "^6.0.4",
+    "semantic-release": "^19.0.3",
+    "source-map-support": "^0.5.21",
     "travis-deploy-once": "^5.0.1",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
-    "typedoc": "^0.13.0",
-    "typescript": "^3.1.6",
-    "utility-types": "^2.1.0"
+    "ts-jest": "^28.0.5",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.4",
+    "utility-types": "^3.10.0"
   },
   "files": [
     "dist",
